# Splive

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  setup.cfg
.github/workflows/: python-publish.yml
splicev/: __init__.py  __main__.py  splicev.py
splive/: splive.py
src/: splicev.py
