[metadata]
name = splicev
version = 0.0.1
author = Chrismettal
author_email = chrismettal@binary-6.de
description = Lightweight CSV splicer / merger
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/chrismettal/splicev
project_urls =
    Bug Tracker = https://gitlab.com/Chrismettal/splicev/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.6

[options.packages.find]
where = splicev